frontend/src/Components/LeagueTable/LeagueTable.module.scss
@use '../../variables';
@import 'include-media/dist/_include-media.scss';

$breakpoints: variables.$resolution-breakpoints;

.table {
    border-collapse: collapse;
    margin: 0;
    padding: 0;

    color: variables.$text-colour;
    background-color: white;

    // font (inmporting mixin from variables)
    @include variables.Nanum-Gothic;
    font-size: 85%;

    thead {
        background-color: variables.$background-colour;
        font-size: 85%;
    }

    tbody tr {

        td {
            // align text
            text-align: center;
            white-space: nowrap;
            // line-height: 1rem;

            // text padding based on screen width
            @include media(">phone") {
                padding: 0.75rem 1rem;
            }

            @include media("<=phone") {
                padding: 0.75rem 0.5rem;
                font-size: 90%;
            }


            &:nth-child(5) {
                text-align: left;
                width: 25rem;
            }

            &:nth-child(6),
            &:nth-child(11),
            &:nth-child(12) {
                text-align: right;
            }


            // position column width
            &:nth-child(2) {
                padding: 0 0.25rem 0;
            }

            // arrow column width
            &:nth-child(3) {
                padding: 0;
            }


            // highlighted columns
            &:nth-child(2),
            &:nth-child(4),
            &:nth-child(6),
            &:nth-child(12) {
                color: black;
            }
        }

        // colour placements (ucl, uel, uecl, relpo, rel)
        .colouredCell {
            width: 3px;
            padding: 0;
        }

        // ucl
        &:nth-child(1),
        &:nth-child(2),
        &:nth-child(3),
        &:nth-child(4) {
            .colouredCell {
                background-color: variables.$ucl-colour;
            }
        }

        // uel
        &:nth-child(5) {
            .colouredCell {
                background-color: variables.$uel-colour;
            }
        }

        // uecl
        &:nth-child(6) {
            .colouredCell {
                background-color: variables.$uecl-colour;
            }
        }

        // relpo
        &:nth-child(16) {
            .colouredCell {
                background-color: variables.$relpo-colour;
            }
        }

        // rel
        &:nth-child(17),
        &:nth-child(18) {
            .colouredCell {
                background-color: variables.$rel-colour;
            }
        }


        // arrow colours
        .colourPos svg {
            color: variables.$positive-colour;
        }

        .colourNeg svg {
            color: variables.$negative-colour;
        }

        // team icons
        .teamIcons {
            padding: 0.3rem 0.125rem 0.3rem;
            // justify-content: center;
            // margin-top: 1rem;
            display: flex;
            justify-content: center;
            align-items: center;

            @include media(">phone") {
                height: 1.75rem;
                img {
                    // margin: 0 auto;
                    max-height: 1.5rem;
                    max-width: 1.5rem;
                }
            }

            @include media("<=phone") {
                height: 1.5rem;
                img {
                    // margin: 0 auto;
                    max-height: 1.25rem;
                    max-width: 1.25rem;
                }
            }


        }


        // goal diff colours
        .colourPos {
            color: variables.$positive-colour;
        }

        .colourNeg {
            color: variables.$negative-colour;
        }


        // slightly delayed cursor highlight
        -webkit-transition: 0.075s 0.075s;
        transition: 0.075s 0.075s;

        &:hover {
            background-color: #d1d1d1;
        }
    }
}

